syntax = "proto2";
package tbnn;

//import "msg_common.proto";
import "msg_role_common.proto";

// 登录相关
//enum c_cmd {
//    login_req = 0;
//    login_resp = 1;
//    login_account_req = 2;
//    kick_resp = 3;
//    update_token_resp = 4;
//}

enum login_mode_code {
	login_mode_code_reserve1 = 0;
    normal = 1; // 普通登陆
    reconnect = 2; // 重连登陆
}

enum login_code {
	login_code_reserve = 0;
    login_success = 1;        // 成功
    login_fail = 2;           // 失败
    err_account = 3;    // 错误账号
    token_timeout = 4;  // token过期
    token_error = 5;    // token错误
    other_login = 6;    // 异地登陆
    force_kick = 7;     // 强制踢下线
}

message LoginReq {
    required login_mode_code code = 1;
    required string token = 2;
    required string lang = 3;
    required game_terminal_type gt = 4;
}

message LoginResp {
    required login_code code = 1;
    optional RoleInfo role = 2;
    optional string reconnect_token = 3;
    optional uint32 game_mode = 4;          // 游戏模式: 1 => 正式模式, 2 => 试玩
    optional uint32 state_flag = 5;         // 状态标志: 0 => 游戏大厅, 2 => 房间
    optional bool gm_switch = 6;            // gm开关: true => 开启 false => 关闭
}

message LoginAccountReq {
    required string account = 1;
    required string token = 2;
    required string lang = 3;
    required game_terminal_type gt = 4;
    required uint32 game_id = 5;
}

message KickResp {
    required login_code code = 1;
}

message UpdateTokenResp {
    optional string reconnect_token = 1;
}
